--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </form>
 
 <script>
-    const scriptURL = 'SUA_URL_DO_APPS_SCRIPT'; // Troque por sua URL de Apps Script
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbyDqpY0JvQnPIfnK_cxfDV-NZFkWPLESMmp3SLOD0XC2A49JIIFhMunz4PLaqPylqjQ/exec'; // Troque por sua URL de Apps Script
     const form = document.getElementById('registroForm');
 
     form.addEventListener('submit', e => {
