--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 </form>
 
 <script>
-    const scriptURL = 'SUA_URL_DO_APPS_SCRIPT'; // substitua pela sua URL
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbyDqpY0JvQnPIfnK_cxfDV-NZFkWPLESMmp3SLOD0XC2A49JIIFhMunz4PLaqPylqjQ/exec'; // substitua pela sua URL
     const form = document.getElementById('registroForm');
 
     form.addEventListener('submit', e => {
