--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
 
     <div class="section">
         <h3>Dados do Empregador</h3>
-        <label>EMPRESA ADOR:</label>
-        <input type="text" name="EMPRESA ADOR">
+        <label>EMPREGADOR:</label>
+        <input type="text" name="EMPREGADOR">
 
         <label>Escritório Contábil:</label>
         <input type="text" name="Escritório Contábil">
