--- a/index.html
+++ b/index.html
@@ -88,8 +88,17 @@
 
         <label>Escolaridade:</label>
         <input type="text" name="Escolaridade">
-    </div>
+        <label>CNH (Sim/Não):</label>
+<div class="checkbox-group">
+    <label><input type="checkbox" name="CNH (Sim/Não)" value="Sim"> Sim</label>
+    <label><input type="checkbox" name="CNH (Sim/Não)" value="Não"> Não</label>
+</div>
 
+<label>Categoria CNH:</label>
+<input type="text" name="Categoria CNH">
+
+    </div>
+    
     <div class="section">
         <h3>Dados do Contrato</h3>
         <label>Data de Admissão:</label>
