--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Ficha de Registro 2025</title>
+<title>Ficha de Registro</title>
 <style>
     body { font-family: Arial, sans-serif; background: #f8f9fa; padding: 20px; }
     h1, h2 { text-align: center; }
@@ -44,19 +44,19 @@
         <label>Filiação:</label>
         <input type="text" name="Filiação">
 
-        <label>Cidade de Nascimento:</label>
+        <label>Cidade de nascimento:</label>
         <input type="text" name="Cidade de nascimento">
 
-        <label>Data de Nascimento:</label>
+        <label>Data de nascimento:</label>
         <input type="date" name="Data de nascimento">
 
-        <label>Estado Civil:</label>
+        <label>Estado civil:</label>
         <div class="checkbox-group">
-            <label><input type="checkbox" name="Estado Civil" value="Casado"> Casado</label>
-            <label><input type="checkbox" name="Estado Civil" value="Solteiro"> Solteiro</label>
-            <label><input type="checkbox" name="Estado Civil" value="União Estável"> União Estável</label>
-            <label><input type="checkbox" name="Estado Civil" value="Viúvo"> Viúvo</label>
-            <label><input type="checkbox" name="Estado Civil" value="Divorciado"> Divorciado</label>
+            <label><input type="checkbox" name="Estado civil" value="Casado"> Casado</label>
+            <label><input type="checkbox" name="Estado civil" value="Solteiro"> Solteiro</label>
+            <label><input type="checkbox" name="Estado civil" value="União Estável"> União Estável</label>
+            <label><input type="checkbox" name="Estado civil" value="Viúvo"> Viúvo</label>
+            <label><input type="checkbox" name="Estado civil" value="Divorciado"> Divorciado</label>
         </div>
 
         <label>Raça/Etnia:</label>
@@ -168,7 +168,7 @@
 </form>
 
 <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbwF3cVJHU5zI00I0n76RzeD11JYaSwQ74hfdUd4Dw5rm04d6qS9rnypqtcB0d-6BGX7oA/exec'; // substitua pela sua URL
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbw5PT1cTAMr-QkEPq-22pgw_oGgBuO1tD55bg_6YO05brnooz0khrdUKzO64r7j4AelaA/exec'; // substitua pela sua URL
     const form = document.getElementById('registroForm');
 
     form.addEventListener('submit', e => {
