--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-<h1>Ficha de Registro 2025</h1>
+<h1>Ficha de Registro</h1>
 <form id="registroForm">
 
     <div class="section">
